# lectures

./: README.md  _config.yml  pyproject.toml
T00 - Temp/: Workshop Part 3.ipynb
T01 - Python Installation/: README.md  hello.ipynb
T02 - Basic Python Part 1/: C1 - Number and String.ipynb  C2 - Collections.ipynb  C3 - Control Structures.ipynb  C4 - Function.ipynb  C5 - Classes and Object.ipynb
T03 - Basic Python Part 2/: C6 - NumPy.ipynb  C7 - Pandas.ipynb  C8 - Matplotlib.ipynb  purchases.xlsx
T04 - Data Processing - Pandas/: C1 - Handling with Missing Data.ipynb  C2 - Handling Duplicate Data.ipynb  C3 - Filtering and Sorting.ipynb  C4 - Grouping.ipynb  C5 - Apply.ipynb  C6 - Merge.ipynb  merge_raw.xlsx
T05 - Data Visualization/02/: Workshop Part 3.ipynb
T05 - Examples/: C01 - Grading.ipynb  C02 - Attendance.ipynb  process_assignment.ipynb  process_grade.ipynb  project_assignment.csv
T05 - Examples/data_private/: mod_data1.ipynb  mod_data2.ipynb  roster_ori.xlsx  student_groups.xlsx  student_groups_ori.csv  สแกนนิ้ว 2024-02.xls  แสกนนิ้ว 2024-03.xls  แสกนนิ้ว 2024-04.xls
T06 - Data Visualization/: C1 - Matplotlib.ipynb  C2 - Seaborn.ipynb  C3 - Pandas - Part 1.ipynb  C4 - Pandas - Part 2.ipynb
T07 - Server Application/: db.py
